--- a/src/containers/NavBar/NavBar.module.scss
+++ b/src/containers/NavBar/NavBar.module.scss
@@ -1,6 +1,6 @@
 @import '../../variables.scss';
 
-.NavBar {
+.navBar {
   display: flex;
   box-sizing: border-box;
   justify-content: space-between;
@@ -11,6 +11,6 @@
   color: white;
 }
 
-.Logo {
+.logo {
   height: 50px;
 }
