Create and style gnome details page

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,12 +1,12 @@
 $dark-brown: #493932;           
-$brown: #564238;           
+$brown: #58483f;           
 $light-brown: #c29a70;           
 $beige: #e6dd96;
 $oatmeal: #eee9d8;
 $red: #bf373e;
 $dark-red: #780b10;
 $blue: #1e8dc5;
-$ligh-blue: #e0e8f3;
+$light-blue: #e0e8f3;
 
 // $accent: #6D87A7;           
 // $error: #811702;
