--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,73 @@
+@import url('https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700&display=swap');
+@import './variables.scss';
+
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+/* ---- typography ---- */
+
+body {
+  color: #111;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 147%;
+}
+
+h1,
+h2,
+h3 {
+  font-family: 'Old Standard TT', serif;
+}
+
+h1 {
+  color: $red;
+  font-size: 3em;
+  text-shadow:
+    0 -1px 0 $dark-red,
+    0 1px 0 $dark-red,
+    0 2px 0 $dark-red,
+    0 3px 0 $dark-red,
+
+    -1px -1px 0 $dark-red,
+    -1px 0 0 $dark-red,
+    -1px 1px 0 $dark-red,
+    -1px 2px 0 $dark-red,
+    -1px 3px 0 $dark-red,
+
+    1px -1px 0 $dark-red,
+    1px 0 0 $dark-red,
+    1px 1px 0 $dark-red,
+    1px 2px 0 $dark-red,
+    1px 3px 0 $dark-red,
+    
+    0 4px 6px black,
+}
+
+p, ul {
+  margin: 0;
+  padding: 0;
+  color: $brown;
+}
+
+strong {
+  color: $dark-brown;
+}
+
+a {
+  text-decoration: none;
+}
+
 .App {
   text-align: center;
 }
