Implemet search by name action and reducer

--- a/src/components/GnomeDetails/GnomesDetails.module.scss
+++ b/src/components/GnomeDetails/GnomesDetails.module.scss
@@ -55,8 +55,10 @@
         }
       }
 
-      .friends {
+      .friends button {
         color: $blue;
+        font-size: inherit;
+        cursor: pointer;
         .infoItem:before {
           background: url(/img/heart.png);
           background-size: cover;
