--- a/src/containers/GomesList/GnomesList.module.scss
+++ b/src/containers/GomesList/GnomesList.module.scss
@@ -2,12 +2,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  width: 90%;
+  margin: 0 auto;
+  
   .gnomesWrapper {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 90%;
+    // display: flex;
+    // justify-content: space-between;
+    // flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
     margin-top: 10px;
 
     a {
