--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -33,7 +33,7 @@ h3 {
 
 h1 {
   color: $red;
-  font-size: 3em;
+  line-height: 1;
   text-shadow: 0 -1px 0 $dark-red, 0 1px 0 $dark-red, 0 2px 0 $dark-red,
     0 3px 0 $dark-red, -1px -1px 0 $dark-red, -1px 0 0 $dark-red,
     -1px 1px 0 $dark-red, -1px 2px 0 $dark-red, -1px 3px 0 $dark-red,
