--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -1,20 +1,30 @@
 @import '../../variables.scss';
 
 .searchBar {
-  width: 35%;
+  width: 85%;
   display: flex;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 15px;
 
   input {
     border: 2px solid $dark-brown;
     border-radius: 5px;
     width: 100%;
-    padding: 5px 8px;
+    padding: 6px 10px 5px;
     margin-left: 10px;
+    font-size: 1em;
   }
 
   svg {
     margin-left: -20px;
   }
+}
+
+@media (min-width: 480px) {
+  .searchBar {
+    width: 35%;
+    margin-top: 20px;
+  }
+}
+@media (min-width: 768px) {
 }
