Updates for 404 page

--- a/src/components/NotFound/NotFound.module.scss
+++ b/src/components/NotFound/NotFound.module.scss
@@ -34,6 +34,13 @@
         margin-bottom: 65px;
       }
 
+      h2 {
+        color: $dark-red;
+        font-weight: 700;
+        font-size: 3em;
+        margin: 20px 0;
+      }
+
       a {
         color: $blue;
       }
