--- a/src/components/GnomeDetails/GnomesDetails.module.scss
+++ b/src/components/GnomeDetails/GnomesDetails.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   width: 80%;
+  max-width: 800px;
   margin: 15px auto;
   padding: 2px 35px 15px;
   box-shadow: 0 5px 15px 5px rgba(0, 0, 0, 0.25);
