--- a/src/containers/GomesList/GnomesList.module.scss
+++ b/src/containers/GomesList/GnomesList.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 90%;
+  max-width: 980px;
   margin: 0 auto;
 
   h1 {
@@ -55,6 +56,7 @@
     }
     .gnomesWrapper {
       grid-template-columns: repeat(3, 1fr);
+      grid-gap: 20px;
     }
   }
 }
