--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -8,7 +8,6 @@
   justify-content: center;
 
   .pageButton {
-
     button {
       display: flex;
       justify-content: center;
@@ -22,11 +21,15 @@
       height: 32px;
       font-size: 0.8em;
     }
-    
+
     .active {
       color: $blue;
       border-color: $blue;
       background-color: $light-blue;
+
+      &:focus {
+        outline: none;
+      }
     }
   }
 }
